BE/Aucation_chat/src/main/java/com/example/aucation_chat/common/error/BadRequestException.java
package com.example.aucation_chat.common.error;

public class BadRequestException extends ApplicationException {

    public BadRequestException(ApplicationError error) {
        super(error);
    }
}
